# abalone_game

./: .gitignore  CMakeLists.txt  abalone  board.cpp  board_player.h  check_output_diff.py  game.cpp  game.py  main.cpp  move.cpp  move_direction.h  move_generator.cpp  move_type.h  readme.md  settings.cpp
data/: settings.json
include/: ai.h  board.h  board_generator.h  game.h  heuristic_calculator.h  minimax.h  move.h  move_direction.h  move_generator.h  settings.h  threadpool.h  timer.h  utils.h
python/: game.py  log_20250409_150639.txt  log_20250409_170100.txt  log_20250409_170351.txt  log_20250409_170732.txt
src/: Test1.moves  abalone.cpp  abalone_wrapper.cpp  ai.cpp  board.cpp  board_generator.cpp  boardgen.cpp  game.cpp  heuristic_calculator.cpp  main.cpp  minimax.cpp  move.cpp  move_direction.cpp  move_generator.cpp  movegen.cpp  settings.cpp  temp move logic.cpp  threadpool.cpp  timer.cpp  trial.cpp
src/simpleGUI/: abalone.html  trialgui.js  trialgui.wasm
